@@ -744,5 +744,5 @@
     "*://*.wyleex.com/*",
     "*://webcache.googleusercontent.com/*"
   ],
-  "version": "3.2.2.0"
+  "version": "3.2.2.1"
 }
